about and service section added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,46 @@
 </head>
 <body>
     
+    <nav>
+        <div class="container">
+            <h1>heading</h1>
+        </div>
+    </nav>
 
-    <h1>hello there</h1>
+    <section class="about-section">
+        <div class="container">
+            <div class="flex-col20">
+                <div class="section-label-wrap">
+                    <img class="section-label-icon" src="/img/star-icon.svg" alt="star icon">
+                    <span class="section-label-text">About us</span>
+                </div>
+                <h2>Market Loo was built on one simple belief — everyday shopping should feel intentional, not ordinary. We curate smart, design-forward essentials that elevate your daily routine without the noise. No clutter. No gimmicks. Just quality picks that turn small decisions into confident moves.</h3>
+            </div>
+        </div>
+    </section>
 
+    <section class="service-section">
+        <div class="container">
+            <div class="content-wrap64">
+                <h2 class="text-color-dark">Where It All Comes Together.</h2>
+                <div class="service-grid-wrap">
+                    <div class="service-card">
+                        <img src="/img/intention-shopping-img.jpg" alt="" class="service-card-img">
+                        <div class="flex-col12">
+                            <h4 class="text-color-dark">Curated with Intention</h4>
+                            <p class="p-small text-color-gray">We don’t overwhelm you with options. Every product is carefully selected for quality, function, and design that actually adds value to your everyday life.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="btn-wrap content-center">
+                    <a href="#" class="btn-main btn-large">
+                        <span>Shop the Move</span>
+                        <img class="btn-icon" src="/img/cart-icon-white.svg" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <script src="app.js"></script>
 </body>
