--- a/index.html
+++ b/index.html
@@ -48,6 +48,18 @@
             </div>
         </div>
     </section>
+
+    <section>
+        <div class="container">
+            <div>
+                <h1>Hello there</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus deleniti reprehenderit a dicta vel doloremque doloribus sapiente dolorem. Beatae, mollitia impedit. Officiis fugit reiciendis iusto perferendis sed veniam, sequi ipsum.</p>
+                <div class="btn-wrap">
+                    <a href="#" class="btn-main btn-large">Schedule a Call</a>
+                </div>
+            </div>
+        </div>
+    </section>
     
     <script src="app.js"></script>
 </body>
